--- a/frontend/src/app/components/partials/search/search.component.css
+++ b/frontend/src/app/components/partials/search/search.component.css
@@ -6,11 +6,11 @@ div{
 }
 
 input{
-  border-radius: 10rem 0 0 10rem;
+  border-radius: 10rem 0rem 0rem 5rem;
   border: none;
   height: 3rem;
   width: 20rem;
-  background-color: #f1f1f1;
+  background-color: #ffecec;
   padding: 1.2rem;
   font-size: 1.1rem;
   font-weight: 500;
@@ -22,9 +22,9 @@ div button{
   height: 3rem;
   width: 5rem;
   font-size: 1rem;
-  border-radius: 0 10rem 10rem 0;
+  border-radius: 0rem 10rem 5rem 0;
   border: none;
-  background-color: #e72929;
+  background-color: rgb(15, 129, 137);
   color: white;
   opacity: 0.8;
   outline: none;
