--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
@@ -33,7 +33,7 @@ form{
 
 button{
   color: white;
-  background-color: #e72929;
+  background-color: #000000;
   width: 100%;
   height: 3rem;
   opacity: 0.8;
