--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -10,13 +10,13 @@ ul{
 li a{
   height: 22.5rem;
   width: 20rem;
-  border: 1px solid whitesmoke;
+  border: 2px solid rgb(0, 50, 31);
   border-radius: 1rem;
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  color: #fff700;
+  color: #610500;
 }
 
 li a:hover{
