--- a/frontend/src/app/components/partials/text-input/text-input.component.css
+++ b/frontend/src/app/components/partials/text-input/text-input.component.css
@@ -2,15 +2,14 @@ input {
   width: 100%;
   height: 100%;
   border: none;
-  border-bottom: 0 solid grey;
   transition: border-bottom 0.15s ease-out;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   font-size: 1.1rem;
   outline: none;
 }
 
 input::placeholder{
-  color: #dfdfdf;
+  color: grey;
   font-size: 0.95rem;
 }
 
