--- a/frontend/src/app/components/pages/cart-page/cart-page.component.css
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.css
@@ -11,7 +11,7 @@ ul{
   flex-direction: column;
   flex:3 0;
   justify-content: space-evenly;
-  border: 1px solid #ffbbbb;
+  border: 1px solid black;
   border-radius: 1rem;
   list-style: none;
   margin: 0.5rem;
@@ -23,7 +23,7 @@ ul li{
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  border-bottom: 1px solid #e4e4e4;
+  border-bottom: 1px solid black;
 }
 
 ul li:last-child{
@@ -75,7 +75,7 @@ li .remove-button:hover{
   align-items: center;
   flex:1 3;
   height: 20rem;
-  border: 1px solid #ffbbbb;
+  border: 1px solid black;
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 0.5rem;
@@ -97,18 +97,18 @@ li .remove-button:hover{
 
 .foods-count::before{
   content:"Count: ";
-  color: grey;
+  color: white;
 }
 
 .total-price::before{
   content: 'Price: ';
-  color: grey;
+  color: white;
 }
 
 .checkout a{
   padding: 1rem;
   color: white;
-  background:#e72929;
+  background:rgb(0, 50, 31);
   display: block;
   width: 99%;
   border-radius: 1rem;
