--- a/frontend/src/app/components/pages/payment-page/payment-page.component.css
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.css
@@ -1,14 +1,13 @@
 .container{
   margin-top: 1rem;
   display: flex;
-  margin: 0 2rem 6rem 2rem;
+  margin: 0rem 2rem 6rem 2rem;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .content{
   width: 35rem;
-  margin-right: 3rem;
   display: flex;
   flex-direction: column;
 }
