--- a/frontend/src/app/components/partials/order-items-list/order-items-list.component.css
+++ b/frontend/src/app/components/partials/order-items-list/order-items-list.component.css
@@ -1,6 +1,6 @@
 table{
   width: 100%;
-  border: 1px solid #eeeeee;
+  border: 2px solid #000000;
   margin-top: 1rem;
   border-radius: 5px;
   padding: 0.5rem 1rem;
